Set up initial inventory API
